# djapiplayground

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/account/: utils.py
apps/account/api/: serializer.py  throttling.py  urls.py  views.py
apps/polls/: apiviews.py  models.py  serializer.py  serializers.py  urls.py  views.py
apps/polls/migrations/: 0001_initial.py  0002_remove_vote_votes_choice_votes_alter_choice_poll.py  0003_remove_choice_votes.py  0004_alter_choice_poll.py
apps/watchlist/: admin.py  models.py  urls.py  views.py
apps/watchlist/api/: permissions.py  serializers.py  urls.py  utils.py  views.py
apps/watchlist/migrations/: 0001_initial.py  0002_alter_movie_description.py  0002_alter_movie_platform.py  0003_alter_streamingplatform_website.py  0004_review.py  0005_review_review_user.py  0006_movie_average_rating_movie_num_rating.py
config/: settings.py  urls.py
